RESOLVED FIXED165588
Gamepad support shows wrong values for PS4 controllers (D-pad is missing)
https://bugs.webkit.org/show_bug.cgi?id=165588
Summary Gamepad support shows wrong values for PS4 controllers (D-pad is missing)
Gregg Tavares
Reported 2016-12-07 20:14:55 PST
Release 19 (Safari 10.1, WebKit 12603.1.14.2) If you plug in a PS4 controller and go to http://html5gamepad.com/ You'll see there is no info for the DPad Firefox 50 gets this correct. Chrome 57 also gets it correct. (Chrome 54 does not)
Attachments
Patch (8.07 KB, patch)
2017-01-26 10:26 PST, Brady Eidson
no flags
Patch (9.57 KB, patch)
2017-01-26 11:00 PST, Brady Eidson
no flags
Patch (9.59 KB, patch)
2017-01-26 11:16 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-12-08 10:10:05 PST
Brady Eidson
Comment 2 2017-01-26 10:26:37 PST
Alex Christensen
Comment 3 2017-01-26 10:39:21 PST
Comment on attachment 299815 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=299815&action=review > Source/WebCore/platform/gamepad/mac/HIDGamepad.cpp:216 > + *button++ = value < 2 || value == 7 ? 1.0 : 0.0; This looks like there are no bounds checks. Please do this another way. > Source/WebCore/platform/gamepad/mac/HIDGamepad.h:138 > + Vector<std::unique_ptr<HIDGamepadDPad>> m_dPads; these could be UniqueRef.
Brady Eidson
Comment 4 2017-01-26 11:00:04 PST
Brady Eidson
Comment 5 2017-01-26 11:16:30 PST
Brady Eidson
Comment 6 2017-01-26 11:23:22 PST
Note You need to log in before you can comment on or make changes to this bug.